--- a/src/Club/Views/Home/Contact.cshtml
+++ b/src/Club/Views/Home/Contact.cshtml
@@ -3,32 +3,39 @@
     ViewBag.Title = "Contacto";
 }
 
+<div class="row">
+    <div class="col-lg-6 col-lg-offset-3">
+        <h2>Contacto</h2>
+        <form method="post">
+            @if (ViewBag.Message != null)
+            {
+                <div>@ViewBag.Message</div>
+            }
+            <div asp-validation-summary="ValidationSummary.ModelOnly"></div>
+            <div class="form-group">
+                <label asp-for="Name">Name</label>
+                <input class="form-control" asp-for="Name" />
+                <span class="text-muted" asp-validation-for="Name"></span>
+            </div>
 
-<h2>Contacto</h2>
-@if(ViewBag.Message != null)
-{
-    <div>@ViewBag.Message</div>
-}
-<form method="post">
-    <div asp-validation-summary="ValidationSummary.ModelOnly"></div>
+            <div class="form-group">
+                <label asp-for="Email">Email</label>
+                <input class="form-control" asp-for="Email" type="email" />
+                <span class="text-muted" asp-validation-for="Email"></span>
+            </div>
 
-    <label asp-for="Name">Name</label>
-    <input asp-for="Name" />
-    <span asp-validation-for="Name"></span>
+            <div class="form-group">
+                <label asp-for="Message">Message</label>
+                <textarea  class="form-control" asp-for="Message" rows="2" cols="40"></textarea>
+                <span class="text-muted" asp-validation-for="Message"></span>
+            </div>
 
-    <label asp-for="Email">Email</label>
-    <input asp-for="Email" type="email" />
-    <span asp-validation-for="Email"></span>
-
-    <label asp-for="Message">Message</label>
-    <textarea asp-for="Message" rows="2" cols="40"></textarea>
-    <span asp-validation-for="Message"></span>
-
-    <div>
-        <input type="submit" value="Enviar mensaje" />
+            <div class="form-group">
+                <input type="submit" class="btn btn-success" value="Enviar mensaje" />
+            </div>
+        </form>
     </div>
-</form>
-
+</div>
 @section Scripts {
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
