--- a/src/Club/Views/Shared/_Layout.cshtml
+++ b/src/Club/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
+            <div class="container container-fluid">
                 <ul class="nav navbar-nav navbar-left">
                     <li>
 
