--- a/src/Club/Views/Shared/_Layout.cshtml
+++ b/src/Club/Views/Shared/_Layout.cshtml
@@ -20,9 +20,14 @@
                 </ul>
                 <a asp-controller="home" asp-action="index" class="navbar-brand" >Club</a>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-
-                    </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a asp-controller="account" asp-action="logout">Logout</a></li>
+                    }
+                    else
+                    {
+                        <li><a asp-controller="account" asp-action="login">Login</a></li>
+                    }
                 </ul>
             </div>
         </nav>
