--- a/src/Club/Views/Events/Detail.cshtml
+++ b/src/Club/Views/Events/Detail.cshtml
@@ -3,6 +3,27 @@
 }
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-        <h2>@Model.Name</h2>
+        @if (Model.IsPrivate)
+        {
+            <div class="alert alert-warning" role="alert">
+                <strong>Este es un evento privado</strong>, lo cual significa que solo es visible para los miembros
+            </div>
+        }
+        <div class="row">
+            <div class="col-md-8 ">
+                <h1>@Model.Name</h1>
+                <p class="lead">@Model.Description</p>
+                <p class="lead">
+                    <i class="fa fa-calendar"></i> @Model.Start - @Model.End
+                </p>
+                <p class="lead">
+                    <span><i class="fa fa-clock-o"></i> @Model.Duration</span>
+                </p>
+                <p class="lead"><i class="fa fa-user"></i> @Model.Host</p>
+            </div>
+            <div class="col-md-3 col">
+                <img class="img-responsive img-thumbnail" src="https://chart.googleapis.com/chart?chs=300x300&cht=qr&chl=Hello%20world&choe=UTF-8" />
+            </div>
+        </div>
     </div>
 </div>
