--- a/src/Club/Views/Events/Create.cshtml
+++ b/src/Club/Views/Events/Create.cshtml
@@ -23,6 +23,13 @@
             </div>
 
             <div class="row">
+                <div class="form-group col-md-9">
+                    <label asp-for="Location"></label>
+                    <input asp-for="Location" class="form-control" />
+                    <span asp-validation-for="Location"></span>
+                </div>
+            </div>
+            <div class="row">
                 <div class="form-group col-md-12">
                     <label asp-for="Description"></label>
                     <textarea asp-for="Description" class="form-control"></textarea>
