Aaarrgh, del commit pasado.

--- a/src/Club/Views/Dashboard/Index.cshtml
+++ b/src/Club/Views/Dashboard/Index.cshtml
@@ -29,7 +29,7 @@
             <div class="panel-body">
                 @if (Model.UsersAwaitingApproval.Any())
                 {
-                    <table class="table">
+                    <table class="table table-responsive">
                         <thead>
                         <tr>
                             <th>Usuario</th>
