Facebook auth & before SSL.

--- a/src/Club/Views/Users/Unapproved.cshtml
+++ b/src/Club/Views/Users/Unapproved.cshtml
@@ -16,16 +16,16 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="user in vm.queriedUsers">
+                    <tr ng-repeat="user in vm.queriedUsers" >
                         <td>{{ user.username }}</td>
                         <td>{{ user.firstName }}</td>
                         <td>{{ user.lastName }}</td>
                         <td>
                             <div class="btn-group" role="group" aria-label="...">
-                                <button type="button" class="btn btn-success btn-sm">
+                                <button type="button" ng-click="vm.approveUser(user.id,true)" class="btn btn-success btn-sm">
                                     <span class="fa fa-check" aria-hidden="true"></span>
                                 </button>
-                                <button type="button" class="btn btn-danger btn-sm">
+                                <button type="button"  ng-click="vm.approveUser(user.id,false)" class="btn btn-danger btn-sm">
                                     <span class="fa fa-ban" aria-hidden="true"></span>
                                 </button>
                             </div>
