Sample data & event attendance initial code

--- a/src/Club/Views/Events/Detail.cshtml
+++ b/src/Club/Views/Events/Detail.cshtml
@@ -19,6 +19,7 @@
             <span><i class="fa fa-clock-o"></i> @Model.Duration</span>
         </p>
         <p class="lead"><i class="fa fa-user"></i> @Model.Host</p>
+        <p class="lead"><i class="fa fa-user"></i> @Model.EventCodeUrl</p>
     </div>
     <div class="col-md-3 col">
         <img class="img-responsive img-thumbnail" src="https://chart.googleapis.com/chart?chs=300x300&cht=qr&chl=Hello%20world&choe=UTF-8" />
