--- a/src/Club/Views/Shared/_Layout.cshtml
+++ b/src/Club/Views/Shared/_Layout.cshtml
@@ -13,24 +13,40 @@
     <header>
         <nav class="navbar navbar-inverse">
             <div class="container container-fluid">
-                <ul class="nav navbar-nav navbar-left">
-                    <li>
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a asp-controller="home" asp-action="index" class="navbar-brand">Club</a>
+                </div>
 
-                    </li>
-                </ul>
-                <a asp-controller="home" asp-action="index" class="navbar-brand">Club</a>
-                <ul class="nav navbar-nav navbar-right">
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        <li><a asp-controller="account" asp-action="logout">Logout</a></li>
-                    }
-                    else
-                    {
-                        <li><a asp-controller="account" asp-action="login">Login</a></li>
-                    }
-                </ul>
-            </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a asp-controller="calendar" asp-action="index">Calendario</a></li>
+                        <li><a asp-controller="announcements" asp-action="index">Avisos</a></li>
+                        <li><a asp-controller="home" asp-action="contact">Contacto</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li><a asp-controller="dashboard" asp-action="index">Dashboard</a></li>
+                            <li><a asp-controller="account" asp-action="logout">Logout</a></li>
+                        }
+                        else
+                        {
+                            <li><a asp-controller="account" asp-action="login">Login</a></li>
+                        }
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
         </nav>
+
+
     </header>
 
     <div class="container-fluid" id="main">
