--- a/src/Club/Views/Events/Detail.cshtml
+++ b/src/Club/Views/Events/Detail.cshtml
@@ -15,7 +15,7 @@
     <div class="col-md-12 ">
         <div class="jumbotron">
             <h1>@Model.Name</h1>
-            <p class="lead">@Model.Description</p>
+            <p class="lead">@Model.Type - @Model.Description</p>
             <p class="lead hidden-print">
                 <span><i class="fa fa-map-marker fa-fw"></i> @Model.Location</span>
             </p>
