--- a/src/Club/Views/Events/Create.cshtml
+++ b/src/Club/Views/Events/Create.cshtml
@@ -24,10 +24,18 @@
             <div class="row">
                 <div class="form-group col-md-12">
                     <label asp-for="Location"></label>
-                    <input asp-for="Location" class="form-control" />
+                    <input asp-for="Location" class="form-control"/>
                     <span asp-validation-for="Location"></span>
                 </div>
             </div>
+            <div class="row">
+                <div class="form-group col-md-12">
+                    <label asp-for="Type"></label>
+                    <select asp-for="Type" class="form-control" asp-items="Html.GetEnumSelectList<Club.Enums.EventType>()"></select>
+                </div>
+            </div>
+
+
             <div class="row">
                 <div class="form-group col-md-12">
                     <label asp-for="Description"></label>
