--- a/src/Club/Views/Calendar/Index.cshtml
+++ b/src/Club/Views/Calendar/Index.cshtml
@@ -8,6 +8,7 @@
 
 
 @section Scripts {
+
     <script src="~/lib/moment/min/moment-with-locales.min.js"></script>
     <script src="~/lib/fullcalendar/dist/fullcalendar.js"></script>
     <script src="~/lib/fullcalendar/dist/lang/es.js"></script>
@@ -39,19 +40,41 @@
                     error: function (a, b, c) {
                     }
                 },
-                eventClick: function (event) {
-                    if (event.url) {
-                        window.open(event.url);
-                        return false;
-                    }
-                }
-                ,
+                //eventClick: function (event) {
+                //    if (event.url) {
+                //        window.open(event.url);
+                //        return false;
+                //    }
+                //}
+                //,
                 eventRender: function (event, element, view) {
                     console.log(event);
-                    return $('<div class="fc-content ' + event.className[0] +
-                        '"><i title="' + event.className[1] + '" class="fa fa-' +
-                        iconDictionary[event.className[1]] + '"></i> ' +
-                        event.start.format("H:mm")+ ' '+ event.title + '</div>');
+                    return $(
+                        '<div data-toggle="modal" data-target="#popup' + event.id + '"' + ' class="fc-content ' + event.className[0] + '">' +
+                            '<i title="' + event.className[1] + '" class="fa fa-' + window.iconDictionary[event.className[1]] + '"></i> ' +
+                            event.start.format("H:mm") + ' ' + event.title +
+                        '</div>' +
+                        '' +
+                        '<div id="popup' + event.id + '" class="modal fade" role="dialog">' +
+                            '<div class="modal-dialog">' +
+                                '<div class="modal-content">' +
+                                    '<div class="modal-header">' +
+                                        '<button type="button" class="close" data-dismiss="modal">&times;</button>' +
+                                        '<h4 class="modal-title">' + event.title +'</h4>' +
+                                    '</div>' +
+                                    '<div class="modal-body">' +
+                                        '<p>' + event.description + '</p>' +
+                                    '</div>' + 
+                                    '<div class="modal-footer">' +
+                                        '<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>' +
+                                        '<a href="' + event.url +'" class="btn btn-info">Ver más</a>' +
+                                    '</div>' + 
+                                '</div>' +
+                            '</div>' +
+                        '</div>');
+                },
+                eventAfterAllRender: function (view) {
+                    //$('[data-toggle="popover"]').popover();
                 }
             });
 
@@ -59,7 +82,6 @@
     </script>
 }
 @section Styles {
-
     <link href="~/lib/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet" />
     <style>
         .fc-content {
@@ -76,6 +98,13 @@
 
             .fc-content.announcement {
                 background-color: #e76a05;
+            }
+
+            .modal-dialog {
+                z-index: 30;
+            }
+            .modal-backdrop.in {
+                z-index: 0;
             }
     </style>
 }
