--- a/src/Club/Views/Account/Login.cshtml
+++ b/src/Club/Views/Account/Login.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
         <input type="submit" value="Acceder" class="btn btn-success" />
-        <a asp-action="forgotten" class="btn btn-link">Crear una cuenta</a>
+        <a asp-action="forgotten" class="btn btn-link">Olvidé mi contraseña</a>
         <a asp-action="signup" class="btn btn-link">Crear una cuenta</a>
     </div>
 </form>
