--- a/src/Club/Views/Problems/Create.cshtml
+++ b/src/Club/Views/Problems/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Club.ViewModels.ProblemViewModel
 
 @{
-    ViewBag.Title = "Nuevo problema";
+    ViewBag.Title = "Añadir problema";
 }
 
 
-<h2>Crear aviso</h2>
+<h2>Añadir problema</h2>
 <form method="post" novalidate>
     <div asp-validation-sumnmary="ValidationSummary.ModelOnly"></div>
 
