--- a/src/Club/Views/Users/Details.cshtml
+++ b/src/Club/Views/Users/Details.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = Model.Username;
 }
 
-<div ng-app="app-attended-events">
-    <div ng-controller="attendedEventsController as vm">
+<div>
+    <div>
         <div class="row">
             <div class="col-lg-12">
                 <h2>@Model.Username</h2>
@@ -15,6 +15,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <p class="lead">@Model.FirstName @Model.LastName</p>
+                <p class="lead">@Model.Level</p>
             </div>
             @if (User.Identity.IsAuthenticated)
             {
@@ -24,7 +25,7 @@
                             <i class="fa fa-cogs fa-fw"></i> Opciones <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
-                            @if (User.Identity.Name.Equals(Model.Username))
+                            @if (User.Identity.Name.Equals(Model.Username) || User.IsInRole("Admin"))
                             {
                                 <li>
                                     <a asp-action="edit">Editar perfil</a>
@@ -40,43 +41,62 @@
             }
         </div>
 
-        <h3>Asistencias</h3>
-        <table class="table table-responsive">
-            <thead>
-                <tr>
-                    <th>Evento</th>
-                    <th>Unicación</th>
-                    <th>Fecha</th>
-                    <th>Duración</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="user in vm.queriedUsers">
-                    <td>{{ user.name }}</td>
-                    <td>{{ user.location }}</td>
-                    <td>{{ user.start | date:'medium' }}</td>
-                    <td>{{ user.duration }}</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3">
-                        <div class="btn-group" role="group" aria-label="...">
-                            <button ng-click="vm.previousPage();" class="btn btn-default" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </button>
-                            <button type="button" class="btn btn-default">
-                                {{ vm.currentPage }} / {{ vm.totalPages }}
-                            </button>
-                            <button ng-click="vm.nextPage();" class="btn btn-default" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </button>
-                        </div>
+        <div>
 
-                    </td>
-                </tr>
-            </tfoot>
-        </table>
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Asistencias</a></li>
+                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Problemas resueltos</a></li>
+                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+                <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="tab-content" ng-app="app-attended-events">
+                <div ng-controller="attendedEventsController as vm" role="tabpanel" class="tab-pane active" id="home">
+                    <table class="table table-responsive">
+                        <thead>
+                            <tr>
+                                <th>Evento</th>
+                                <th>Ubicación</th>
+                                <th>Fecha</th>
+                                <th>Duración</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="user in vm.queriedUsers">
+                                <td>{{ user.name }}</td>
+                                <td>{{ user.location }}</td>
+                                <td>{{ user.start | date:'medium' }}</td>
+                                <td>{{ user.duration }}</td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="3">
+                                    <div class="btn-group" role="group" aria-label="...">
+                                        <button ng-click="vm.previousPage();" class="btn btn-default" aria-label="Previous">
+                                            <span aria-hidden="true">&laquo;</span>
+                                        </button>
+                                        <button type="button" class="btn btn-default">
+                                            {{ vm.currentPage }} / {{ vm.totalPages }}
+                                        </button>
+                                        <button ng-click="vm.nextPage();" class="btn btn-default" aria-label="Next">
+                                            <span aria-hidden="true">&raquo;</span>
+                                        </button>
+                                    </div>
+
+                                </td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="profile">...</div>
+                <div role="tabpanel" class="tab-pane" id="messages">...</div>
+                <div role="tabpanel" class="tab-pane" id="settings">...</div>
+            </div>
+
+        </div>
     </div>
 </div>
 @section Scripts{
