--- a/src/Club/Views/Dashboard/Index.cshtml
+++ b/src/Club/Views/Dashboard/Index.cshtml
@@ -30,6 +30,9 @@
         <a asp-controller="problems" asp-action="create" class="btn btn-primary btn-lg btn-block">
             <i class="fa fa-exclamation-circle"></i> Nuevo problema
         </a>
+        <a asp-controller="topics" asp-action="create" class="btn btn-primary btn-lg btn-block">
+            <i class="fa fa-exclamation-circle"></i> Nuevo tema
+        </a>
     </div>
     <div class="col-lg-4">
         <div class="panel panel-default">
