--- a/src/Club/Views/Submit/Create.cshtml
+++ b/src/Club/Views/Submit/Create.cshtml
@@ -9,7 +9,7 @@
 }
 
 
-<h2>Solucion a @problema.Name</h2>
+<h2>Enviar solución a @problema.Name</h2>
 @if (Model != null)
 {
     <div class="alert alert-@estatusClass" role="alert">
