--- a/src/Club/Views/Submit/Details.cshtml
+++ b/src/Club/Views/Submit/Details.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h2>Solución a @problema.Name de @Model.User</h2>
+        <h2>Solución a <strong>@problema.Name</strong> de <strong>@Model.User</strong></h2>
     </div>
     <div class="col-md-8">
         <code data-gist-id="@Model.GistId"></code>
