--- a/src/Club/Views/Events/Detail.cshtml
+++ b/src/Club/Views/Events/Detail.cshtml
@@ -23,6 +23,9 @@
                 <i class="fa fa-calendar fa-fw"></i> @Model.Start
             </p>
             <p class="lead">
+                <i class="fa fa-calendar-o fa-fw"></i> @Model.TermName
+            </p>
+            <p class="lead">
                 <span><i class="fa fa-clock-o fa-fw"></i> @Model.Duration</span>
             </p>
             <p class="lead"><i class="fa fa-user fa-fw"></i> @Model.Host</p>
