--- a/src/Club/Views/Dashboard/Index.cshtml
+++ b/src/Club/Views/Dashboard/Index.cshtml
@@ -1,139 +1,129 @@
-﻿@model Club.ViewModels.DashboardViewModel
+﻿@using System.Threading.Tasks
+@using Club.ViewModels
+@model Club.ViewModels.DashboardViewModel
 
 @{
+    var term = ViewBag.Term as TermViewModel;
     ViewBag.Title = "Dashboard";
+    int year = DateTime.Now.Year;
+    int month = DateTime.Now.Month;
 }
+
 
 <div class="row">
     <div class="col-lg-4">
         <div class="list-group">
-            <a asp-controller="calendar" asp-action="index" class="list-group-item">
-                <span class="badge">@Model.UpcomingEventsCount</span>
-                Calendario
+            @if (term != null)
+            {
+                <a href="#" class="list-group-item active">
+                    <h3 class="list-group-item-heading">Periodo: @term.Name</h3>
+                    <p class="list-group-item-text">@term.Start.ToShortDateString() - @term.End.ToShortDateString()</p>
+                </a>
+                <a asp-controller="events" asp-action="create" class="list-group-item">
+                    Nuevo evento <span class="badge"><i class="fa fa-calendar-plus-o"></i></span>
+                </a>
+            }
+            else
+            {
+                <a asp-controller="terms" asp-action="create"
+                   class="list-group-item list-group-item-warning">
+                    <h3 class="list-group-item-heading">Registra un periodo</h3>
+                    <p class="list-group-item-text">
+                        Debes registrar un periodo para poder registrar eventos
+                    </p>
+                </a>
+            }
+            <a asp-controller="announcements" asp-action="create" class="list-group-item">
+                Nuevo aviso <span class="badge"><i class="fa fa-bullhorn"></i></span>
             </a>
-            <a asp-controller="announcements" asp-action="index" class="list-group-item">
-                <span class="badge">@Model.RecentAnnouncements?.Count()</span>
-                Avisos
+            <a asp-controller="problems" asp-action="create" class="list-group-item">
+                Nuevo problema <span class="badge"><i class="fa fa-gavel"></i></span>
+            </a>
+            <a asp-controller="topics" asp-action="create" class="list-group-item">
+                Nuevo tema <span class="badge"><i class="fa fa-tags"></i></span>
+            </a>
+            <a asp-controller="terms" asp-action="create" class="list-group-item">
+                Nuevo periodo <span class="badge"><i class="fa fa-tags"></i></span>
             </a>
             <a asp-action="unapproved" asp-controller="users" class="list-group-item">
                 <span class="badge">@Model.UsersAwaitingApprovalCount</span>
                 Usuarios pendientes de aprobación
             </a>
         </div>
-
-        <a asp-controller="events" asp-action="create" class="btn btn-primary btn-lg btn-block">
-            <i class="fa fa-calendar-plus-o"></i> Nuevo evento
-        </a>
-        <a asp-controller="announcements" asp-action="create" class="btn btn-primary btn-lg btn-block">
-            <i class="fa fa-exclamation-circle"></i> Nuevo aviso
-        </a>
-        <a asp-controller="problems" asp-action="create" class="btn btn-primary btn-lg btn-block">
-            <i class="fa fa-exclamation-circle"></i> Nuevo problema
-        </a>
-        <a asp-controller="topics" asp-action="create" class="btn btn-primary btn-lg btn-block">
-            <i class="fa fa-exclamation-circle"></i> Nuevo tema
-        </a>
-    </div>
-    <div class="col-lg-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Usuarios más activos</h3>
-            </div>
-            <div class="panel-body">
-                @if (Model.MostActiveUsers.Any())
-                {
-                    <table class="table table-responsive">
-                        <thead>
-                            <tr>
-                                <th>Usuario</th>
-                                <th>Eventos</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var usuario in Model.MostActiveUsers)
-                            {
-                                <tr>
-                                    <td><a asp-controller="users" asp-action="details" asp-route-username="@usuario.Username" >@usuario.Username</a></td>
-                                    <td>@usuario.EventsAttendedCount</td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                }
-            </div>
-            <div class="panel-footer">
-                <a asp-action="index" asp-controller="users">Ver todos</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Usuarios más activos</h3>
-            </div>
-            <div class="panel-body">
-                @if (Model.MostActiveUsers.Any())
-                {
-                    <table class="table table-responsive">
-                        <thead>
-                            <tr>
-                                <th>Usuario</th>
-                                <th>Eventos</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var usuario in Model.MostActiveUsers)
-                            {
-                                <tr>
-                                    <td><a asp-controller="users" asp-action="details" asp-route-username="@usuario.Username">@usuario.Username</a></td>
-                                    <td>@usuario.EventsAttendedCount</td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                }
-            </div>
-            <div class="panel-footer">
-                <a asp-action="index" asp-controller="users">Ver todos</a>
-            </div>
-        </div>
     </div>
     <div class="col-lg-8">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Usuarios pendientes de aprobación</h3>
-            </div>
-            <div class="panel-body">
-                @if (Model.UsersAwaitingApproval.Any())
-                {
-                    <table class="table table-responsive">
-                        <thead>
-                            <tr>
-                                <th>Usuario</th>
-                                <th>Nombre</th>
-                                <th>Apellidos</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var usuario in Model.UsersAwaitingApproval)
-                            {
-                                <tr>
-                                    <td>@usuario.Username</td>
-                                    <td>@usuario.FirstName</td>
-                                    <td>@usuario.LastName</td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                }
-                else
-                {
-                    <span>Vaya, parece que no hay usuarios esperando ser aprobados</span>
-                }
-            </div>
-            <div class="panel-footer">
-                <a asp-action="unapproved" asp-controller="users">Ver más</a>
-            </div>
+        <div id="calendar" class="calendar">
         </div>
     </div>
 </div>
+
+
+
+
+@section Scripts {
+
+    <script src="~/lib/moment/min/moment-with-locales.min.js"></script>
+    <script src="~/lib/fullcalendar/dist/fullcalendar.js"></script>
+    <script src="~/lib/fullcalendar/dist/lang/es.js"></script>
+
+    <script>
+        var iconDictionary = {
+            'success': 'check',
+            'warning': 'exclamation-triangle',
+            'info': 'exclamation-circle',
+            'danger': 'exclamation',
+
+            'contest': 'sort-numeric-asc',
+            'workshop': 'hand-lizard',
+            'conference': 'microphone',
+            'class': 'book'
+        };
+        $(document).ready(function () {
+
+            // page is now ready, initialize the calendar...
+
+            $('#calendar').fullCalendar({
+                defaultDate: '@($"{year}-{month:D2}-{DateTime.Now.Day}")',
+                defaultView: 'basicWeek',
+                timezone: 'America/Mexico_City',
+                events: {
+                    url: '/api/calendar',
+                    type: 'GET',
+                    success: function (a, b, c) {
+                    },
+                    error: function (a, b, c) {
+                    }
+                }
+            });
+
+        });
+    </script>
+}
+@section Styles {
+    <link href="~/lib/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet" />
+    <style>
+        .fc-content {
+            margin: 1px 0;
+            padding: 2px;
+            border-radius: 5px;
+            font-size: .85em;
+            color: white;
+        }
+
+            .fc-content.event {
+                background-color: #576396;
+            }
+
+            .fc-content.announcement {
+                background-color: #e76a05;
+            }
+
+        .modal-dialog {
+            z-index: 30;
+        }
+
+        .modal-backdrop.in {
+            z-index: 0;
+        }
+    </style>
+}
